2009-03-05  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-color-button.c (hildon_color_button_get_property):Add
	missing 'break' statement in in 'case' construct to avoid
	incorrect warnings.

2009-03-05  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector-entry.c
	(hildon_touch_selector_entry_get_property),
	(hildon_touch_selector_entry_set_property): Add missing 'break'
	statements in in 'case' constructs to avoid incorrect warnings.

2009-03-05  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-time-editor.c
	(hildon_time_editor_get_time_separators): Do not crash if
	the first label is NULL.

2009-03-05  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-date-selector.c (_month_days): Check for month to be
	strictly less than 12, since otherwise we may overrun the array.

2009-03-04  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-date-button.c (+hildon_date_button_new_full)
	(hildon_date_button_new, hildon_date_button_new_with_year_range)
	(hildon_date_button_init): Set the date selector using a
	construction property, to make it happen after HildonButton's
	"value" property is set.

	Fixes: NB#104439 (hildon_date_button_new() isn't set to the
	current date by default)

2009-03-04  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt
	* src/hildon-program.c
	* src/hildon-stackable-window.c
	* src/hildon-window.c:
	Documentation updates

2009-03-04  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-window-stack.c (hildon_window_stack_get_default)
	(hildon_window_stack_new, +hildon_window_stack_set_property)
	(+hildon_window_stack_get_property)
	(hildon_window_stack_class_init)
	(+hildon_window_stack_set_window_group)
	(+hildon_window_stack_get_window_group):
	Make the window group a construction property.

2009-03-04  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt
	* src/hildon-stackable-window-private.h
	* src/hildon-stackable-window.h
	* src/hildon-stackable-window.c